@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha1
+	- Make installation error messages more helpful
 	- Added Swedish (sv_SE) translation (Thanks yeager)
 	- Allow Add / Verify of sub directories of existing catalogs
 	- Prevent an fread of 0 bytes if you seek to the end of a file
